CHANGES:

- added magic initiate feats
- changed College of War Dancer from regaining bardic inspiration on kill
- fixed Cantrips Master and Spell Sniper cantrips offering on some cases
- fixed College of War Dancer interaction with Haste
- fixed College of War Dancer weapon switch when off hand was empty
- fixed Spell Sniper to only consider ranger hit type cantrips
- reduced College of War Dancer maximum momentum to half-PB rounded up